# sift-wasm

./: Cargo.toml  LICENSE_MIT  README.md
.cargo/: config.toml
docs/: index.html  index.js  sift.js
image_matching/: index.html  index.js  sift.d.ts  sift_bg.wasm  sift_bg.wasm.d.ts  sift_bg.wat
src/: gaussian_blur.rs  grid.rs  interpolate.rs  keypoints.rs  lib.rs  match_keypoints.rs  octaves.rs  rgb_to_gray.rs
