[package]
name = "sift"
version = "0.1.0"
authors = ["raphi-web <raphael.prinz1993@gmail.com>"]
edition = "2021"
description = "SIFT feature detection and matching for WebAssembly"
license = "MIT OR Apache-2.0"
repository = "https://github.com/your-username/sift-wasm"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.100"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }

# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
# compared to the default allocator's ~10K. It is slower than the default
# allocator, however.
#
# Unfortunately, `wee_alloc` requires nightly Rust when targeting wasm for now.
wee_alloc = { version = "0.4.5", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3.50"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
debug = false
overflow-checks = false

[package.metadata.wasm-pack.profile.release]
wasm-opt = ['-O4', "--enable-bulk-memory", "--detect-features", "--enable-simd", "--enable-nontrapping-float-to-int"]

